Isuue #1 fix: css changes for alignment

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1045,6 +1045,7 @@ ul.subList-padding {
   box-shadow: 0 8px 6px -8px #d9d4d4;
   padding-top: 1em;
   padding-bottom: 1em;
+  padding-left: 0.3em;
 }
 .popular-page .ui.cards ~ .ui.cards {
   margin-top: 1.875em;
